add GC parameters