@@ -1,2 +1,2 @@
 #!/bin/bash
-java -jar -Dspring.profiles.active=$1 -Dlogging.config=logback-spring.xml RandomForest-0.0.1.jar
+java -Xms5G -Xmx7G -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:CMSInitiatingOccupancyFraction=60 -jar -Dspring.profiles.active=$1 -Dlogging.config=logback-spring.xml RandomForest-0.0.1.jar
